# mark

./: .editorconfig  .gitignore  Cargo.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: deploy-docs.yml  test.yml
docs/: README.md  book.toml
docs/src/: README.md  SUMMARY.md
docs/src/developer/: architecture.md  contributing.md
docs/src/user-guide/: config.toml  configuration.md  getting-started.md  installation.md
scripts/: docs.sh
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs  parser.rs
src/config/: colors.rs  loader.rs  mod.rs  parser.rs  settings.rs
src/markdown_parser/: mod.rs
src/markdown_parser/lexer/: lexer.rs  mod.rs  tokens.rs
src/markdown_parser/parser/: ast.rs  mod.rs  parser.rs
src/search/: background.rs  background_tests.rs  markdown.rs  mod.rs  tests.rs
src/ui/: app.rs  events.rs  file_browser.rs  mod.rs
src/ui/components/: file_list.rs  header.rs  help.rs  help_popup.rs  mod.rs  pagination.rs  search.rs  spinner.rs
